project('ejemplos',
'cpp',
version: '0.1',
# Flags del compilador.
default_options: ['warning_level=3'
,'cpp_std=c++17']
)

# ejecutables para cada archivo
ejemplo_if_exe = executable('ejemplo_if_exe'
,'ejemplo_if.cpp')

ejemplo_if_else_exe = executable('ejemplo_if_else_exe'
,'ejemplo_if_else.cpp')

ejemplo_for_exe = executable('ejemplo_for_exe'
,'ejemplo_for.cpp')

ejemplo_switch_exe = executable('ejemplo_switch_exe'
,'ejemplo_switch.cpp')

ejemplo_while_exe = executable('ejemplo_while_exe'
,'ejemplo_while.cpp')

ejemplo_do_while_exe = executable('ejemplo_do_while_exe'
,'ejemplo_do_while.cpp')

operador_ternario_exe = executable('operador_ternario_exe'
,'operador_ternario.cpp')

operadores_exe = executable('operadores_exe'
,'operadores.cpp')
